<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffff090b">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/basic_prayers"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="30sp"
        android:background="#ffffd944" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/jesus_prayer"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:background="#ffffd944"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/marian_prayers"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:background="#ffffd944"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/saints_prayer"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:textSize="28sp"
        android:background="#ffffd944"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/other_prayers"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:background="#ffffd944"/>
    </RelativeLayout>
</ScrollView>